--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,126 +2,89 @@
 ViewData["Title"] = "Диабет 35";
 }
 
-<div class="flex flex-col items-center justify-center gap-8 h-700 bg-[url('/images/block-1.png')] bg-cover px-16">
-    <h1 class="text-red-600 text-3xl">Откройте для себя мир возможностей<br>Мы не просто предлагаем решения,
-        а<br>переопределяем возможности.</h1>
-    <button class="bg-linear-to-r from-[#3569CF] to-[#5566BA] px-12 py-8 cursor-pointer">Подробнее</button>
-</div>
-
-<div class="flex flex-col items-center gap-64 mt-125 px-16">
-    <h1 class="text-[#1654A4] text-4xl text-center">О сообществе</h1>
-    <div class="flex items-start justify-center flex-wrap gap-32 overflow-auto">
-        <img src="/images/block-2-1.jpg" class="max-w-full md:max-w-450">
-        <img src="/images/block-2-3.png" class="max-w-full md:max-w-450">
-        <img src="/images/block-2-2.jpg" class="max-w-full md:max-w-450">
-    </div>
-    <p class="text-lg text-[#1654A4] max-w-700">Добро пожаловать на сайт «Поддержка больных диабетом» — ваш
-        надежный
-        помощник в повседневной жизни с диабетом.
-        Здесь вы найдете актуальную информацию о заболевании, советы по правильному питанию, рекомендации по
-        контролю
-        уровня сахара в крови и эффективные методы самопомощи. Наша цель — создать сообщество поддержки, где
-        каждый
-        сможет получить ответы на важные вопросы, обменяться опытом и найти мотивацию для ведения здорового
-        образа
-        жизни. Вместе мы поможем сделать жизнь с диабетом более комфортной и осознанной.</p>
-</div>
-
-<div class="flex flex-col gap-50 mt-300">
-    <div class="flex gap-64 p-40 self-start bg-[#D9D9D9] pr-16">
-        <img src="/images/block-3-1.png" class="max-w-675 object-cover flex-1 min-w-0 hidden lg:block">
-        <div class="flex flex-col items-center gap-32 max-w-575 flex-1">
-            <h1 class="text-3xl text-[#1654A4] text-center">Диабет 1 типа: что важно знать</h1>
-            <p class="text-lg text-[#1654A4]">
-                Диабет 1 типа — это хроническое аутоиммунное заболевание, при котором поджелудочная железа
-                практически
-                перестает вырабатывать инсулин — гормон, необходимый для регулирования уровня сахара в крови.
-                Чаще всего
-                диабет 1 типа диагностируется в детском или подростковом возрасте, но может проявиться и у
-                взрослых.
-                Основные симптомы включают частое мочеиспускание, сильную жажду, потерю веса и усталость. Для
-                успешного
-                контроля заболевания необходим регулярный мониторинг уровня глюкозы, инъекции инсулина и
-                соблюдение
-                сбалансированного питания.
-                На нашем сайте вы найдете полезные рекомендации по ведению жизни с диабетом 1 типа, советы по
-                самоконтролю, информацию о современных методах лечения и поддержке, а также сможете получить
-                ответы на
-                важные вопросы от специалистов и единомышленников. Мы помогаем сделать жизнь с диабетом 1 типа
-                более
-                безопасной и комфортной.</p>
+<div class="min-h-900 bg-[#73BCC4] p-16">
+    <div class="max-w-1500 mx-auto flex flex-col md:flex-row items-center justify-center gap-32">
+        <div class="flex flex-col items-center gap-16">
+            <img src="~/images/block-1-1.png" class="max-h-600">
+            <h1 class="text-4xl text-white text-center">Шилова Елена Александровна, председатель НКО ВОООИ "Объединение
+                больных сахарным диабетом"</h1>
         </div>
-    </div>
-    <div class="flex gap-64 p-40 self-end bg-[#D9D9D9] pl-16">
-        <div class="flex flex-col items-center gap-32 max-w-575 flex-1">
-            <h1 class="text-3xl text-[#1654A4] text-center">Диабет 2 типа: ключевые аспекты</h1>
-            <p class="text-lg text-[#1654A4]">
-                Диабет 2 типа — это наиболее распространенная форма диабета, которая часто развивается у
-                взрослых, но
-                может также возникать у детей и подростков. Это заболевание связано с инсулинорезистентностью,
-                когда
-                клетки организма не могут эффективно использовать инсулин, что приводит к повышению уровня
-                сахара в
-                крови.
-                Основные факторы риска включают избыточный вес, малоподвижный образ жизни, генетическую
-                предрасположенность и возраст. Симптомы могут быть менее выраженными, чем при диабете 1 типа, и
-                включают
-                усталость, частое мочеиспускание, жажду и медленное заживление ран.
-                На нашем сайте вы найдете информацию о профилактике и управлении диабетом 2 типа, включая
-                рекомендации
-                по здоровому питанию, физической активности и контролю уровня сахара в крови. Мы предлагаем
-                ресурсы,
-                которые помогут вам лучше понять свое состояние, а также поддержку от специалистов и людей,
-                которые
-                сталкиваются с аналогичными проблемами. Вместе мы можем сделать жизнь с диабетом 2 типа более
-                активной и
-                полноценной.</p>
-        </div>
-        <img src="/images/block-3-2.png" class="max-w-675 object-cover flex-1 min-w-0 hidden lg:block">
-    </div>
-    <div class="flex gap-64 p-40 self-start bg-[#D9D9D9] pr-16">
-        <img src="/images/block-3-3.png" class="max-w-675 object-cover flex-1 min-w-0 hidden lg:block">
-        <div class="flex flex-col items-center gap-32 max-w-575 flex-1">
-            <h1 class="text-3xl text-[#1654A4] text-center">Поддержка близких людей: важная часть жизни с
-                диабетом</h1>
-            <p class="text-lg text-[#1654A4]">
-                Жизнь с диабетом — это вызов не только для самого пациента, но и для его близких. Родные и
-                друзья играют
-                ключевую роль в поддержке, понимании и создании благоприятной атмосферы для эффективного
-                управления
-                заболеванием.
-                На нашем сайте вы найдете полезные советы и рекомендации для близких людей: как правильно
-                поддерживать,
-                мотивировать и помогать больным диабетом, как распознавать симптомы и реагировать на возможные
-                осложнения. Мы предлагаем информацию о том, как совместно справляться с трудностями, сохранять
-                позитивный настрой и укреплять семейные отношения.
-                Вместе с вашей поддержкой пациенты смогут чувствовать себя увереннее и жить полноценной,
-                активной
-                жизнью. Здесь вы найдете не только знания, но и сообщество единомышленников, готовых помочь и
-                поделиться
-                опытом.</p>
+        <div class="flex flex-col items-center gap-16">
+            <h1 class="text-4xl text-white text-center">Вологодская областная общественная организация "Объединение
+                больных
+                сахарных диабетом"</h1>
+            <img src="~/images/logo.png" class="max-h-500">
         </div>
     </div>
 </div>
 
+<div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3">
+    <img src="~/images/2-1.png" class="max-w-full w-full min-w-0 object-cover">
+    <img src="~/images/2-2.png" class="max-w-full w-full min-w-0 object-cover">
+    <img src="~/images/2-3.png" class="max-w-full w-full min-w-0 object-cover col-span-1 sm:col-span-2 md:col-span-1">
+</div>
+
+<div class="flex flex-col items-center w-full max-w-1100 mx-auto px-16">
+    <h1 class="whitespace-pre-line text-[#73BCC4] font-black text-3xl my-100">
+        Добро пожаловать на сайт «Поддержка больных диабетом» — ваш надежный помощник в повседневной жизни с диабетом.
+
+        Здесь вы найдете актуальную информацию о заболевании, советы по правильному питанию, рекомендации по контролю
+        уровня сахара в крови и эффективные методы самопомощи.
+
+        Наша цель — создать сообщество поддержки, где каждый сможет получить ответы на важные вопросы, обменяться опытом
+        и найти мотивацию для ведения здорового образа жизни.
+
+        Вместе мы поможем сделать жизнь с диабетом более комфортной и осознанной.
+    </h1>
+    <h1 class="text-[#F20000] text-3xl text-center">
+        Откройте для себя мир возможностей
+        Мы не просто предлагаем решения, а переопределяем возможности.
+    </h1>
+    <a href="/Events" class="bg-[#73BCC4] px-12 py-8 mt-32 text-white font-black cursor-pointer">Подробнее</a>
+</div>
+
+<div class="max-w-1000 w-full mx-auto px-16 flex flex-col gap-100 my-250">
+    <h1 class="font-black text-5xl text-[#73BCC4]">Наши волонтеры</h1>
+    <img class="w-full" src="~/images/index.png">
+</div>
+
+<a name="zapis"></a>
 <div class="flex justify-center mt-350 px-16">
     <div class="relative flex justify-end gap-128 bg-[#D2D2DB] rounded-3xl p-45 w-full max-w-1350 min-h-360">
         <img src="/images/block-4.jpg"
-            class="absolute max-w-420 min-h-430 bottom-0 left-45 object-cover hidden lg:block">
-        <div class="flex flex-col justify-center gap-16 max-w-650">
-            <h1 class="text-[#1654A4] text-5xl">Остались вопросы?</h1>
-            <p class="text-[#1654A4] opacity-50">Оставьте заявку, и наши специалисты свяжутся с вами!</p>
-            <div class="flex justify-between flex-wrap gap-32">
-                <input class="w-full border-b-2 border-[#15509c3a] text-[#15509C] py-10" placeholder="Ваше имя">
-                <input class="w-full border-b-2 border-[#15509C3a] text-[#15509C] py-10 text-center"
-                    placeholder="Напишите свой email">
+            class="absolute max-w-420 min-h-430 bottom-0 left-45 object-cover hidden xl:block">
+        @using(Html.BeginForm("RegisterQuestion", "Home", FormMethod.Post,
+        new {@class = "flex flex-col justify-center gap-16 max-w-650"}))
+        {
+        <h1 class="text-[#1654A4] text-5xl">Остались вопросы?</h1>
+        <p class="text-[#1654A4] opacity-50">Оставьте заявку, и наши специалисты свяжутся с вами!</p>
+        <div class="flex flex-col md:flex-row justify-between gap-32">
+            <input name="name" class="focus:border-[#15509c] w-full border-b-2 border-[#15509c3a] text-[#15509C] py-10"
+                placeholder="Ваше имя">
+            <input name="email" type="email"
+                class="focus:border-[#15509c3a] w-full border-b-2 border-[#15509C3a] text-[#15509C] py-10"
+                placeholder="Напишите свой email">
+            <input name="question"
+                class="focus:border-[#15509c] w-full border-b-2 border-[#15509c3a] text-[#15509C] py-10"
+                placeholder="Вопрос">
+            <input type="hidden" class="hidden" name="ReturnUrl" value="/#zapis">
+        </div>
+        <div class="flex gap-32 flex-col md:flex-row items-start">
+            <div class="flex items-start gap-16 h-full">
+                <input name="check" id="check-afert" required type="checkbox"
+                    class="block cursor-pointer max-w-35 max-h-35 w-full h-full appearance-none border-5 border-[#10D953] bg-[#71AAF4] checked:bg-[#10D953]">
+                <label for="check-afert">ПРЕДОСТАВЛЯЯ
+                    СВОИ ДАННЫЕ, ВЫ СОГЛАШАЕТЕСЬ НА ПОЛУЧЕНИЕ СООБЩЕНИЙ ПО
+                    ЭЛЕКТРОННОЙ ПОЧТЕ. ВЫ МОЖЕТЕ
+                    ОТКАЗАТЬСЯ ОТ ПОДПИСКИ В ЛЮБОЕ ВРЕМЯ</label>
             </div>
             <button
-                class="self-end rounded-3xl bg-[linear-gradient(12.18deg,#15509C_-18.77%,#AFCFF9_221.97%)] px-60 py-17 cursor-pointer text-white shadow-[0_5px_10px_0_#744037BF,0_2px_0_0_#6C3232]">Отправить</button>
+                class="rounded-3xl bg-[linear-gradient(12.18deg,#15509C_-18.77%,#AFCFF9_221.97%)] px-60 py-17 cursor-pointer text-white shadow-[0_5px_10px_0_#744037BF,0_2px_0_0_#6C3232]">Отправить</button>
         </div>
+        <h1 class="text-center w-full text-green-500 text-2xl">@ViewBag.AddInfo</h1>
+        }
     </div>
 </div>
-
 
 <div class="flex justify-center flex-col items-center 2xl:flex-row gap-x-120 w-full max-w-1500 my-250 mx-auto px-16">
     <div id="map" class="h-470 max-w-full 2xl:max-w-[50%] w-full"></div>
@@ -133,7 +96,12 @@ ViewData["Title"] = "Диабет 35";
             // Промис `ymaps3.ready` будет зарезолвлен, когда загрузятся все компоненты основного модуля API
             await ymaps3.ready;
 
-            const { YMap, YMapDefaultSchemeLayer } = ymaps3;
+            ymaps3.import.registerCdn('https://cdn.jsdelivr.net/npm/{package}', [
+                '@@yandex/ymaps3-default-ui-theme@0.0.19'
+            ]);
+
+            const { YMap, YMapDefaultSchemeLayer, YMapDefaultFeaturesLayer, YMapMarker } = ymaps3;
+            const { YMapDefaultMarker } = await ymaps3.import('@@yandex/ymaps3-default-ui-theme');
 
             // Иницилиазируем карту
             const map = new YMap(
@@ -153,16 +121,22 @@ ViewData["Title"] = "Диабет 35";
                 }
             );
 
+            const marker = new YMapDefaultMarker({
+                title: 'Диабет35',
+                coordinates: [39.894523, 59.211382]
+            });
+
             // Добавляем слой для отображения схематической карты
-            map.addChild(new YMapDefaultSchemeLayer());
+            map.addChild(new YMapDefaultSchemeLayer())
+                .addChild(new YMapDefaultFeaturesLayer({ zIndex: 1800 }))
+                .addChild(marker);
         }
     </script>
 
     <div class="flex flex-col gap-32 max-w-full 2xl:max-w-[25%]">
         <h1 class="text-center text-[#1654A4] text-3xl">Контакты</h1>
-        <h2 class="flex items-center gap-16 text-[#1654A4] text-lg"><img src="/images/address.svg">г.Вологда,
-            ул.
-            Зосимовская, дом 30</h2>
+        <h2 class="flex items-center gap-16 text-[#1654A4] text-lg"><img src="/images/address.svg">Россия, Вологда,
+            Герцена ул. 42</h2>
         <h2 class="flex items-center gap-16 text-[#1654A4] text-lg"><img src="/images/time.svg">Режим работы: пн
             пт
             10:00-20:00</h2>
@@ -174,9 +148,12 @@ ViewData["Title"] = "Диабет 35";
         <a class="flex items-center flex-wrap gap-16 text-[#1654A4] text-lg underline"
             href="mailto:diabetvologda35@gmail.com"><img src="/images/email.svg">diabetvologda35@gmail.com</a>
         <div class="flex gap-16 items-center">
-            <a href="#" class="underline bg-[#1654A4] rounded-full p-8"><img src="/images/tg.svg"></a>
-            <a href="#" class="underline bg-[#1654A4] rounded-full p-8"><img src="/images/wu.svg"></a>
-            <a href="#" class="underline bg-[#1654A4] rounded-full p-8"><img src="/images/vk.svg"></a>
+            <a href="/tg" class="block underline bg-[#1654A4] rounded-full p-8"><img class="block aspect-square"
+                    src="/images/tg.svg"></a>
+            <a href="/wu" class="block underline bg-[#1654A4] rounded-full p-8"><img class="block aspect-square"
+                    src="/images/wu.svg"></a>
+            <a href="https://vk.com/diabet35?from=groups" class="block underline bg-[#1654A4] rounded-full p-8"><img
+                    class="block aspect-square" src="/images/vk.svg"></a>
         </div>
     </div>
 </div>
