--- a/Views/Home/Contacts.cshtml
+++ b/Views/Home/Contacts.cshtml
@@ -7,16 +7,21 @@ ViewData["Title"] = "Контакты";
     <h2 class="text-3xl text-[#1654A4]">Остались вопросы? Если да то мы ждём от вас заявки.</h2>
     <div class="flex gap-80">
         @using(Html.BeginForm("RegisterQuestion", "Home", FormMethod.Post, new {@class = "flex flex-col gap-16"})) {
-        <input name="name" class="px-50 py-25 text-[#1654A4] text-sm sm:text-2xl" placeholder="Имя(обязательно)">
-        <input name="phone" class="px-50 py-25 text-sm text-[#1654A4] sm:text-2xl"
-            placeholder="Номер телефона(обязательно)">
-        <input name="question" class="px-50 py-25 text-sm text-[#1654A4] sm:text-2xl" placeholder="Пишите вопросы.">
-        <p class="flex items-start gap-10 text-lg text-[#1654A4]"><input name="check" required type="checkbox" class="block cursor-pointer max-w-35 max-h-35 w-full h-full appearance-none border-5 border-[#10D953] bg-[#71AAF4] checked:bg-[#10D953]">ПРЕДОСТАВЛЯЯ СВОИ ДАННЫЕ, ВЫ СОГЛАШАЕТЕСЬ НА ПОЛУЧЕНИЕ СООБЩЕНИЙ ПО
+        <input name="name" class="bg-white px-50 py-25 text-[#1654A4] text-sm sm:text-2xl"
+            placeholder="Имя(обязательно)">
+        <input name="email" type="email" class="bg-white px-50 py-25 text-sm text-[#1654A4] sm:text-2xl"
+            placeholder="Электронная почта(обязательно)">
+        <input name="question" class="bg-white px-50 py-25 text-sm text-[#1654A4] sm:text-2xl"
+            placeholder="Пишите вопросы.">
+        <label for="check-afert" class="flex items-start gap-10 text-lg text-[#1654A4]"><input name="check" id="check-afert" required type="checkbox"
+                class="block cursor-pointer max-w-35 max-h-35 w-full h-full appearance-none border-5 border-[#10D953] bg-[#71AAF4] checked:bg-[#10D953]">ПРЕДОСТАВЛЯЯ
+            СВОИ ДАННЫЕ, ВЫ СОГЛАШАЕТЕСЬ НА ПОЛУЧЕНИЕ СООБЩЕНИЙ ПО
             ЭЛЕКТРОННОЙ ПОЧТЕ. ВЫ МОЖЕТЕ
-            ОТКАЗАТЬСЯ ОТ ПОДПИСКИ В ЛЮБОЕ ВРЕМЯ</p>
+            ОТКАЗАТЬСЯ ОТ ПОДПИСКИ В ЛЮБОЕ ВРЕМЯ</label>
         <button class="bg-linear-to-r from-[#3569CF] to-[#5566BA] text-white cursor-pointer py-8">Отправить</button>
+        <h1 class="text-center w-full text-green-500 text-2xl">@ViewBag.AddInfo</h1>
         }
-        <div class="flex flex-col">
+        <div class="flex flex-col w-full max-w-320">
             <a class="text-2xl text-[#1654A4] underline"
                 href="mailto:diabetvologda35@gmail.com">diabetvologda35@gmail.com</a>
             <p class="text-2xl text-[#1654A4]">8 (8172) 53-00-44</p>
