--- a/Views/Home/D1t.cshtml
+++ b/Views/Home/D1t.cshtml
@@ -2,97 +2,82 @@
 ViewData["Title"] = "Диабет 1 типа";
 }
 
+<div class="min-h-800 bg-[#73BCC4] px-50">
+    <div class="flex flex-wrap justify-center items-center gap-100 py-100 max-w-1700 h-full mx-auto">
+        <img src="~/images/block-3-1.png" class="flex-1 max-h-580 object-cover">
+        <div class="flex flex-col flex-1">
+            <h1 class="text-[#1654A4] text-3xl font-black text-center mb-50">Диабет 1 типа: что важно знать</h1>
+            <h2 class="text-[#1654A4] text-2xl font-black text-justify">
+                Диабет 1 типа — это хроническое аутоиммунное заболевание, при котором поджелудочная железа практически
+                перестает вырабатывать инсулин — гормон, необходимый для регулирования уровня сахара в крови. Чаще всего
+                диабет 1 типа диагностируется в детском или подростковом возрасте, но может проявиться и у взрослых.<br>
+                Основные симптомы включают частое мочеиспускание, сильную жажду, потерю веса и усталость. Для успешного
+                контроля заболевания необходим регулярный мониторинг уровня глюкозы, инъекции инсулина и соблюдение
+                сбалансированного питания.<br>
+                На нашем сайте вы найдете полезные рекомендации по ведению жизни с диабетом 1 типа, советы по
+                самоконтролю,
+                информацию о современных методах лечения и поддержке, а также сможете получить ответы на важные вопросы
+                от
+                специалистов и единомышленников. Мы помогаем сделать жизнь с диабетом 1 типа более безопасной и
+                комфортной.
+            </h2>
+        </div>
+    </div>
+</div>
+
 <div class="max-w-1300 mx-auto mt-140 px-16">
-    <h1 class="text-5xl text-center mb-80 text-[#1654A4]">Диабет 1 типа: как жить полноценно и уверенно</h1>
-    <p class="text-[#1654A4] text-3xl">
-        Диабет 1 типа — это хроническое аутоиммунное заболевание, при котором поджелудочная железа перестаёт
-        вырабатывать инсулин — гормон, регулирующий уровень сахара в крови. Это состояние требует постоянного контроля,
-        но при правильном подходе человек с диабетом 1 типа может жить активной, насыщенной и счастливой жизнью.<br>
-        Что важно знать о диабете 1 типа<br></p>
-    <ul class="text-[#1654A4] list-disc ml-32 text-3xl">
-        <li>Диабет 1 типа чаще всего развивается в детстве, подростковом или молодом возрасте, но может возникнуть и у
-            взрослых.</li>
-        <li>Причина — сбой в иммунной системе, из-за которого организм разрушает клетки, вырабатывающие инсулин.</li>
-        <li>Без инсулина глюкоза не может попасть в клетки, и уровень сахара в крови повышается.</li>
-        <li>Лечение всегда включает введение инсулина — с помощью инъекций или инсулиновой помпы.</li>
-    </ul>
-    <p class="text-[#1654A4] text-3xl">Основные симптомы</p>
-    <ul class="text-[#1654A4] list-disc ml-32 text-3xl">
-        <li>Постоянная жажда</li>
-        <li>Частое мочеиспускание</li>
-        <li>Резкая потеря веса</li>
-        <li>Сильная усталость</li>
-        <li>Раздражительность</li>
-        <li>Затуманенное зрение</li>
-        <li>У детей — ночное недержание мочи, если раньше этого не было</li>
-    </ul>
-    <p class="text-[#1654A4] text-3xl">
-        Если вы заметили эти симптомы — важно немедленно обратиться к врачу.<br>
-        Лайфхаки для жизни с диабетом 1 типа<br>
-        💉 Инсулин под контролем
-    </p>
-    <ul class="text-[#1654A4] list-disc ml-32 text-3xl">
-        <li>Используйте инсулиновую ручку или помпу — выбирайте то, что удобно именно вам.</li>
-        <li>Храните запас инсулина и расходных материалов дома и в дороге.</li>
-        <li>Всегда носите с собой глюкометр или сенсор для мониторинга сахара.</li>
-    </ul>
-    <p class="text-[#1654A4] text-3xl">
-        🍽 Питание — ваш союзник
-    </p>
-    <ul class="text-[#1654A4] list-disc ml-32 text-3xl">
-        <li>Считайте углеводы и подбирайте дозу инсулина в соответствии с приёмом пищи.</li>
-        <li>Отдавайте предпочтение продуктам с низким гликемическим индексом.</li>
-        <li>Планируйте приёмы пищи заранее, особенно при активном образе жизни.</li>
-    </ul>
-    <p class="text-[#1654A4] text-3xl">
-        🏃‍♂️ Физическая активность — с умом
-    </p>
-    <ul class="text-[#1654A4] list-disc ml-32 text-3xl">
-        <li>Умеренные нагрузки помогают контролировать уровень сахара.</li>
-        <li>Всегда проверяйте уровень глюкозы до и после тренировки.</li>
-        <li>Иметь при себе быстрые углеводы (например, сок или глюкозные таблетки) — обязательно!</li>
-    </ul>
-    <p class="text-[#1654A4] text-3xl">
-        🧠 Психологическое здоровье
-    </p>
-    <ul class="text-[#1654A4] list-disc ml-32 text-3xl">
-        <li>Не бойтесь просить помощи и говорить о своих чувствах.</li>
-        <li>Общение с другими людьми с диабетом помогает чувствовать себя не одиноким.</li>
-        <li>Ведите дневник самоконтроля — это помогает отслеживать прогресс и выявлять закономерности.</li>
-    </ul>
-    <p class="text-[#1654A4] text-3xl">
-        Полезные советы для родителей и близких
-    </p>
-    <ul class="text-[#1654A4] list-disc ml-32 text-3xl">
-        <li>Поддерживайте, а не контролируйте. Помогайте ребёнку или близкому человеку быть самостоятельным.</li>
-        <li>Изучите основы диабета — это поможет лучше понимать, что происходит.</li>
-        <li>Будьте рядом в трудные моменты, особенно при гипо- или гипергликемии.</li>
-        <li>Не забывайте о психологической поддержке — она не менее важна, чем медицинская.</li>
-    </ul>
-    <p class="text-[#1654A4] text-3xl">
-        Полезные ресурсы
-        📚 На нашем сайте вы найдёте:
-    </p>
-    <ul class="text-[#1654A4] list-disc ml-32 text-3xl">
-        <li>Инструкции по использованию инсулина и глюкометров</li>
-        <li>Примеры меню и рецепты для людей с диабетом.</li>
-        <li>Форум и чат для общения с другими людьми с диабетом</li>
-        <li>Контакты служб поддержки и горячих линий</li>
-    </ul>
-    <p class="text-[#1654A4] text-3xl">
-        Помните<br>
-        Диабет 1 типа — это не приговор. Это образ жизни, который можно контролировать. С правильной информацией,
-        поддержкой и заботой о себе вы можете жить ярко, активно и счастливо.<br>
-        Вы не одни — мы рядом! 💙
-    </p>
+    <p class="text-[#1654A4] whitespace-pre-wrap font-black text-4xl">
+        1. Официальные организации
+         1. Российская Диабетическая Ассоциация - <a class="underline" href="https://www.diabet.ru">www.diabet.ru</a>
+         2. ФГБУ "НМИЦ эндокринологии" - <a class="underline" href="https://endojournals.ru">endojournals.ru</a>
+         3. Минздрав РФ (раздел о диабете) - <a class="underline" href="https://minzdrav.gov.ru/ministry/61/22">minzdrav.gov.ru/ministry/61/22</a>
+        2. Образовательные проекты
+         1. Школа диабета 1 типа - <a class="underline" href="https://shkoladiabeta.ru/t1">shkoladiabeta.ru/t1</a>
+         2. Академия диабета - <a class="underline" href="https://diacademy.ru">diacademy.ru</a>
+         3. Проект "Правило 15" - <a class="underline" href="https://pravilo15.ru">pravilo15.ru</a>
+        3. Поддержка детей с СД1
+         1. Фонд "Быть вместе" - <a class="underline" href="https://beingtogether.ru">beingtogether.ru</a>
+         2. Проект "Диабет у детей" - <a class="underline" href="https://diabet-child.ru">diabet-child.ru</a>
+         3. Лагерь для детей с диабетом - <a class="underline" href="https://diabet-camp.ru">diabet-camp.ru</a>
+        4. Сообщества и форумы
+         1. Форум "Диа-клуб" - <a class="underline" href="https://diaclub.ru">diaclub.ru</a>
+         2. Группа ВК "Диабет 1 типа" - <a class="underline" href="https://vk.com/t1diabetes">vk.com/t1diabetes</a>
+         3. Telegram-чат "Диабет ON" - <a class="underline" href="https://t.me/diabet_on">t.me/diabet_on</a>
+        5. Технологии и гаджеты
+         1. CGM системы (российские поставщики) - <a class="underline" href="https://dexcom.ru">dexcom.ru</a>
+         2. Помповая терапия - <a class="underline" href="https://medtronic-diabetes.ru">medtronic-diabetes.ru</a>
+         3. Приложение "Диачек" - <a class="underline" href="https://diacheck.ru">diacheck.ru</a>
+        6. Правовая поддержка
+         1. Льготы для диабетиков - <a class="underline" href="https://socialnaya-podderzhka.ru">socialnaya-podderzhka.ru</a>
+         2. Центр защиты прав пациентов - <a class="underline" href="https://patientrights.ru">patientrights.ru</a>
+         3. Юридическая помощь РДА - <a class="underline" href="https://diabet.ru/yurist">diabet.ru/yurist</a>
+        7. Психологическая помощь
+         1. Горячая линия психпомощи - 8-800-333-44-34
+         2. Проект "Диабет и психика" - <a class="underline" href="https://diabet-psy.ru">diabet-psy.ru</a>
+         3. Чат поддержки в Telegram - <a class="underline" href="https://t.me/diabet_support">t.me/diabet_support</a>
+        8. Региональные центры
+         1. Московский диабетический центр - <a class="underline" href="https://mosdiabet.ru">mosdiabet.ru</a>
+         2. СПб диабетическое общество - <a class="underline" href="https://diabet-spb.ru">diabet-spb.ru</a>
+         3. Карта диабет-центров РФ - <a class="underline" href="https://yandex.ru/maps/diabetes">yandex.ru/maps/diabetes</a>
+        9. Товары для диабетиков
+         1. Интернет-магазин "Диабетика" - <a class="underline" href="https://diabetica.ru">diabetica.ru</a>
+         2. Аптека "Диабет" - <a class="underline" href="https://aptekadiabet.ru">aptekadiabet.ru</a>
+         3. Ортопедическая обувь - <a class="underline" href="https://ortocomfort.ru">ortocomfort.ru</a>
+        10. Мобильные приложения
+         1. Диабет под контролем - d<a class="underline" href="https://iabet-control.ru">iabet-control.ru</a>
+         2. Мой глюкометр - <a class="underline" href="https://play.google.com/store/apps/details?id=ru.diabet.myglukometer">play.google.com/store/apps/details?id=ru.diabet.myglukometer</a>
+         3. DiaNot (напоминания) - <a class="underline" href="https://dianot.ru">dianot.ru</a>
+        11. Экстренная помощь
+         1. Горячая линия РДА - +7 (495) 505-30-30
+         2. Скорая помощь - 112 (при тяжелой гипогликемии)</p>
 </div>
 
 <h1 class=" bg-[url('/images/events/1.jpg')] h-400 bg-center bg-cover flex justify-center items-center text-white
         text-3xl text-center mt-115 px-16">
-    “Мы не просто предлагаем решения, а<br>переопределяем возможности.”<br>— Happy DiaCamp
+    “Мы не просто предлагаем решения, а<br>переопределяем возможности.”
 </h1>
 
-<div class="max-w-1300 mx-auto mt-140 px-16">
+<div class="max-w-1300 mx-auto my-140 px-16">
     <p class="text-[#1654A4] text-3xl">
         В России люди с сахарным диабетом 1 типа имеют право на ряд льгот и мер социальной поддержки. Вот основные из
         них:<br><br>
@@ -187,18 +172,4 @@ ViewData["Title"] = "Диабет 1 типа";
         о льготах, полагающихся конкретному человеку с сахарным диабетом 1 типа, необходимо проконсультироваться с
         врачом-эндокринологом, посетить поликлинику по месту жительства и обратиться в органы социальной защиты
         населения.</p>
-</div>
-
-<div class="max-w-1150 mx-auto my-115 px-16">
-    <h1 class="text-5xl mb-50">Фото с мероприятий</h1>
-    <div class="flex justify-center flex-wrap gap-70">
-        <div class="flex flex-col gap-50 max-w-500">
-            <img src="~/images/events/2-1.jpg" class="h-full">
-            <p class="text-[#1654A4] text-lg">Встреча с Ириной Слуцкой_Ледовый дворец_02.06.2016</p>
-        </div>
-        <div class="flex flex-col gap-50 max-w-500">
-            <img src="~/images/events/2-2.jpg" class="h-full">
-            <p class="text-[#1654A4] text-lg">День диабета_02.11.2020 Запись на мероприятие.</p>
-        </div>
-    </div>
 </div>
